--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,11 @@ inputs:
   image:
     description: "The name (reference) of the image to create deployment"
     required: true
+  image_pull_secret_name:
+    description: |
+      "In the case of private images, provide the image pull secret if you have already created that.
+      Otherwise, provide inputs create_pull_secret_from or registry_hostname, registry_username and registry_password"
+    required: false
   namespace:
     description: "The OpenShift project/Kubernetes namespace to deploy to. Defaults to current context's."
     required: false
