--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -59,10 +59,10 @@ jobs:
           image: ${{ env.IMAGE_PATH }}
           namespace: ${{ env.TEST_NAMESPACE }}
           port: ${{ env.APP_PORT }}
-          create_pull_secret_from: docker
-          # registry: quay.io
+          # create_pull_secret_from: docker
+          registry: quay.io
           # registry_username: diagrawa
-          # registry_password: ${{ secrets.REGISTRY_PASSWORD }}
+          registry_password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Echo outputs
         run: |
