--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -60,7 +60,7 @@ jobs:
           namespace: ${{ env.TEST_NAMESPACE }}
           port: ${{ env.APP_PORT }}
           # create_pull_secret_from: docker
-          registry: quay.io
+          registry_hostname: quay.io
           # registry_username: diagrawa
           registry_password: ${{ secrets.REGISTRY_PASSWORD }}
 
