--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -61,7 +61,7 @@ jobs:
           port: ${{ env.APP_PORT }}
           # create_pull_secret_from: docker
           registry_hostname: quay.io
-          # registry_username: diagrawa
+          registry_username: diagrawa
           registry_password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Echo outputs
