--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -41,14 +41,13 @@ jobs:
           insecure_skip_tls_verify: true
           namespace: ${{ env.TEST_NAMESPACE }}
 
-      # - name: Podman login
-      #   uses: redhat-actions/podman-login@v1
-      #   with:
-      #     registry: quay.io
-      #     username: diagrawa
-      #     password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Podman login
+        uses: redhat-actions/podman-login@v1
+        with:
+          registry: quay.io
+          username: diagrawa
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      - run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login quay.io -u diagrawa --password-stdin
 
       # This step will create a deployment, service, and route to run your app and expose it to the internet.
       - name: Create and expose app
@@ -59,7 +58,7 @@ jobs:
           image: ${{ env.IMAGE_PATH }}
           namespace: ${{ env.TEST_NAMESPACE }}
           port: ${{ env.APP_PORT }}
-          # create_pull_secret_from: docker
+          # create_pull_secret_from: podman
           registry_hostname: quay.io
           registry_username: diagrawa
           registry_password: ${{ secrets.REGISTRY_PASSWORD }}
